--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
 </head>
 <body>
   <h1>Discover hidden places in the world around you</h1>
-  <a href="">Download Excursion (Coming soon!)</a>
+  <p>
+    <a class="download" href="">Download Excursion (Coming soon!)</a>
+  </p>
+  <video autoplay>
+    <source src="./resources/videos/excursion.mp4"  type="video/mp4">
+    Video unavailable.
+  </video>
+
+  <p class="catchphrase">Your personal travel guide</p>
+  <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+  <p>
+    <img src="./resources/images/camp.jpg" alt="">
+  </p>
+
+  <p>
+    <img src="./resources/images/phone.png" alt="">
+  </p>
+  <p class="catchphrase">Coming Soon for iPhone and Android</p>
+
+  <p>
+    <a class="download" href="">Download Excursion (Coming soon!)</a>
+  </p>
+
 </body>
 </html>
