--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </video>
 
   <p class="catchphrase">Your personal travel guide</p>
-  <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+  <p class="explanation">Excursion remembers places you like, and recommends new points of interest around you.</p>
   <p>
     <img src="./resources/images/camp.jpg" alt="">
   </p>
