--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@
     <a class="download" href="">Download Excursion (Coming soon!)</a>
   </p>
 
+  <p class="footer">&copy; Excursion</p>
+
 </body>
 </html>
