--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <p>
     <a class="download" href="">Download Excursion (Coming soon!)</a>
   </p>
-  <video autoplay>
+  <video autoplay loop>
     <source src="./resources/videos/excursion.mp4"  type="video/mp4">
     Video unavailable.
   </video>
